--- a/src/scss/blocks/core/image.scss
+++ b/src/scss/blocks/core/image.scss
@@ -3,8 +3,10 @@
  */
 
 .wp-block-image {
-	figure {
-		/* margin-bottom: $space-6; */
+
+	/* Remove margin bottom from linked images */
+	a img {
+		margin-bottom: 0;
 	}
 
 
